--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <meta charset="utf-8">
     <title>VoiCo - Voice Codes for Websites</title>
     <link rel="shortcut icon" href="/icons/voico-icon.png">
     <meta name="description" content="Use our Firefox extension to show a Voice Code on every website">
