--- a/popup.html
+++ b/popup.html
@@ -9,15 +9,34 @@
       min-height: 200px;
       font-family: Helvetica, sans-serif;
       font-size: 14px;
+      line-height: 1.5em;
     }
     .hidden { display: none; }
     img { display: block; }
+    p {
+      margin: 0 auto;
+      text-align: center;
+      max-width: 300px;
+    }
+    button {
+      display: block;
+      color: #FFF;
+      font-size: 14px;
+      background-color: #618f30;
+      border-color: #618f30;
+      border: 1px solid;
+      border-radius: 4px;
+      margin: 10px auto;
+      padding: 10px;
+      cursor: pointer;
+    }
     </style>
   </head>
 
 <body>
   <div class="container">
     <img id="qr" src="https://voico.de/icons/voico-96.png">
+    <p id="btn"></p>
   </div>
   <script src="popup.js"></script>
 </body>
