--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p>Zusätzlich für Rezepte auf Chefkoch:<br>
                 Rufe den Chefkoch Skill für Alexa mit den ausgewählten Rezept auf.</p>
             <p><img class="screenshot" src="/voico.jpg"></p>
-            <p>Installiere unsere <a href="https://addons.mozilla.org/de/firefox/addon/voico/">Firefox-Extension</a>!</p>
+            <p>Installiere die <a href="https://addons.mozilla.org/de/firefox/addon/voico/">Firefox-Extension</a>!</p>
             <p>Die Extension ist open source. Wenn du Wünsche hast oder einen Fehler
                 melden willst, kannst du das gerne <a
                         href="https://github.com/oschettler/voico-extension">auf Github</a> tun.</p>
