--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>VoiCo - Voice Codes for Websites</title>
     <link rel="shortcut icon" href="/icons/voico-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Use our Firefox extension to show a Voice Code on every website">
+    <meta name="description" content="Zeige QR-Code bei Chefkoch-Rezeoten und starte den Chefkoch Alexa Skill mit einem Rezept">
     <meta name="author" content="Dr. Olav Schettler">
     <script type="application/ld+json">
     {
@@ -22,7 +22,7 @@
     }
     </script>
 
-    <meta name="keywords" content="voice, voice code, short code, qr code">
+    <meta name="keywords" content="QR-Code, Rezepte, Alexa Skill">
     <style>
         body {
             font-family: Helvetica, sans-serif;
