--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
     </script>
 
-    <meta name="keywords" content="QR-Code, Rezepte, Alexa Skill">
+    <meta name="keywords" content="QR-Code, Chefkoch, Rezepte, Scannen, Alexa Skill">
     <style>
         body {
             font-family: Helvetica, sans-serif;
