--- a/public/popup.html
+++ b/public/popup.html
@@ -18,6 +18,17 @@
       text-align: center;
       max-width: 300px;
     }
+    #feedback {
+      display: flexbox;
+      justify-content: center;
+    }
+    #command {
+      font-style: italic;
+    }
+    #alert {
+      border-color: #618f30;
+      background-color: #dff0d8;
+    }
     button {
       display: block;
       color: #FFF;
@@ -30,6 +41,9 @@
       padding: 10px;
       cursor: pointer;
     }
+    .feedback {
+      background-color: white;
+    }
     </style>
   </head>
 
@@ -37,6 +51,15 @@
   <div class="container">
     <img id="qr" src="https://voico.de/icons/voico-96.png">
     <p id="btn"></p>
+    <p>Voice Codes sind ein Experiment. Wir wissen, dass sie noch nicht perfekt funktionieren.
+      Zur Verbesserung der Erkennung hilft uns dein Feedback sehr. Hat Alexa das Rezept aufgerufen?</p>
+    <p id="command"></p>
+    <form id="feedback" onsubmit="feedback()">
+      <p id="alert"></p>
+      <input id="code" type="hidden" name="code">
+      <button type="submit" class="feedback" name="worked" value="yes">ja</button>
+      <button type="submit" class="feedback" name="worked" value="no">nein</button>
+    </form>
   </div>
   <script src="popup.js"></script>
 </body>
